--- a/style.css
+++ b/style.css
@@ -296,6 +296,7 @@ background-position-y: 57px;
 }
 
 .future__info_title {
+  color: #FFFFFF;
   margin-top: 0;
   width: 81%;
   font-family: "montserratregular", arial, helvetica, sans-serif ;
@@ -308,6 +309,7 @@ background-position-y: 57px;
 }
 
 .future__info_description {
+  color: #FFFFFF;
   font-family: "montserratregular", arial, helvetica, sans-serif ;
   font-weight: 500;
   font-size: 18px;
@@ -416,6 +418,7 @@ background-position-y: 57px;
 }
 
 .safety-info__title {
+  color: #FFFFFF;
   margin-top: 0;
   font-family: "montserratregular", arial, helvetica, sans-serif ;
   font-weight: 600;
@@ -428,6 +431,7 @@ background-position-y: 57px;
 }
 
 .safety-info__description {
+  color: #FFFFFF;
   font-family: "montserratregular", arial, helvetica, sans-serif ;
   font-weight: 500;
   font-size: 17px;
@@ -619,8 +623,8 @@ background-position-y: 57px;
   display: none;
 }
 .logo {
-  margin-right: 190px;
-  margin-left: 0px;
+  margin-right: 51%;
+  margin-left: 1px;
   width: 140px;
   height: 32px;
   background-size: cover;
@@ -648,8 +652,8 @@ margin-bottom: 0;
 .main__title {
   margin: 0;
   position: absolute;
-  left: 90px;
-  top: 157px;
+  left: 24%;
+  top: 19.8%;
   width: 201px;
   height: 61px;
   display: block;
@@ -663,7 +667,7 @@ margin-bottom: 0;
   font-style: normal;
   line-height: 18px;
   margin-left: -3px;
-  margin-bottom: 46px; }
+  margin-bottom: 12.5%; }
 
 .main__img {
   width: 357px;
@@ -679,29 +683,35 @@ margin-bottom: 0;
 
 .info-tesla__speed {
   margin-right: 0px;
-  margin-left: 39px;
-  margin-bottom: 11px;
-  width: 300px;
+  margin-left: 10.4%;
+  margin-bottom: 4%;
+  width: 35%;
   height: 50px;
   background-size: contain;
 }
 
 .info-tesla__km {
   margin-right: 0px;
-  margin-left: 39px;
-  margin-bottom: 11px;
-  width: 300px;
-  height: 50px;
+  margin-left: 8.5%;
+  margin-bottom: 3%;
+  width: 32%;
+  height: 55px;
   background-size: contain;
-
+}
 .info-tesla__test {
-  top: 41px;
+  background-repeat: no-repeat;
+  background-image: url(img/Testdrive-mobile.svg);
+  top: 37px;
   margin-top: -8px;
-  margin-left: 32px;
+  margin-left: 8.5%;
 }
 
 .info-tesla__button {
-  margin-left: 175px;
+  color: #ffffff;
+  background-color: #E51937;
+  font-size: 14px;
+  margin-top: 1%;
+  margin-left: 47%;
 }
 
 .main__arrow {
@@ -714,11 +724,11 @@ margin-bottom: 0;
 
 .future {
   padding-left: 0;
-  background-size: 130%;
+  background-size: 135%;
   background-repeat: no-repeat;
-  padding-top: 319px;
-  background-position-y: 2px;
-  background-position-x: -35px;
+  padding-top: 85%;
+  background-position-y: -2%;
+  background-position-x: 31%;
   margin-bottom: 0;
 }
 
@@ -728,14 +738,16 @@ margin-bottom: 0;
 }
 
 .future__info_title{
+  color: #FFFFFF;
   width: 92%;
-  padding-left: 26px;
-  padding-top: 21px;
+  padding-left: 7%;
+  padding-top: 5.7%;
 }
 
 .future__info_description {
+  color: #FFFFFF;
   width: 92%;
-  padding-left: 27px;
+  padding-left: 7%;
   margin-bottom: 0;
 }
 
@@ -746,88 +758,108 @@ margin-bottom: 0;
 }
 
 .safety {
-  background-size: 30%;
-  padding-top: 294px;
+  background-size: 106%;
+  padding-top: 78.4%;
   padding-right: 0;
+  background-position-x: 0%;
+  background-position-y: 9%;
 }
 
 .safety-info {
   padding-top: 0;
-  padding-bottom: 17px;
+  padding-bottom: 5%;
 }
 
 .safety-info__title {
+  color: #FFFFFF;
+  font-size: 32px;
   width: 92%;
-  padding-left: 31px;
-  padding-top: 18px;
+  padding-left: 8%;
+  padding-top: 5%;
 }
 
 .safety-info__description {
+  color: #FFFFFF;
   width: 92%;
-  padding-left: 30px;
+  padding-left: 8%;
   font-size: 18px;
 }
 
 .safety__img {
-  width: 362px;
-  height: 186px;
+  width: 96%;
+  height: 36%;
   left: -2px;
-  top: 1337px;
+  top: 162%;
 }
 
 .img-more {
-  width: 362px;
+  width: 96%;
   height: 186px;
-  left: -2px;
-  top: 1340px;
+  left: -1px;
+  top: 168.8%;
 }
 
 .img-more__Car-crash {
-  width: 86px;
-  height: 44px;
-  left: 206px;
-  top: 72px;
+  background-repeat: no-repeat;
+  background-image: url(img/Crach-mobile.svg);
+  width: 25%;
+  height: 27%;
+  left: 57%;
+  top: 67.5%;
 }
 
 .img-more__Protection-1 {
-  width: 66px;
-  height: 98px;
-  left: 1px;
-  top: 0px;
+  background-image: url(img/Front-mobile.svg);
+  background-repeat: no-repeat;
+  width: 19%;
+  height: 53%;
+  left: 24.9%;
+  top: -28%;
 }
 
 .img-more__Protection-2 {
-  width: 65px;
-  height: 47px;
-  left: 27px;
-  top: -70px;
+  background-image: url(img/side-mobile.svg);
+  background-repeat: no-repeat;
+  width: 18%;
+  height: 27%;
+  left: 51.6%;
+  top: -90%;
 }
 }
 
-@media (width: 768px) {
+@media (max-width: 768px) and (min-width: 376px) {
 
   .wrapper {
     width: 100%;
   }
 
   .header {
-    margin-top: 24px;
-    margin-bottom: 181px;
+    margin-top: 3%;
+    margin-bottom: 24%;
   }
+
+.menu-shop__mobile::before {
+  transform: translateY(-9px);
+}
+
+.menu-shop__mobile::after {
+  transform: translateY(7px);
+}
 
   .menu-models, .menu-shop__item {
     display: none;
   }
   .logo {
-    margin-left: 15px;
+    margin-left: 2%;
     width: 166px;
     height: 51px;
     background-size: cover;
+    margin-right: 34.5%;
   }
 
   .menu-shop__mobile {
     width: 35px;
-    left: 258px;
+    left: 468%;
     top: -2px;
   }
 
@@ -837,20 +869,20 @@ margin-bottom: 0;
 
   .main {
   width: 100%;
-  height: 755px;
+  height: 100%;
   background-image: url(img/teslatxt.svg);
   background-repeat: no-repeat;
-  background-size: 110%;
-  background-position-x: -17px;
-  background-position-y: -8px;
+  background-size: 109%;
+  background-position-x: 15%;
+  background-position-y: -1%;
   margin-bottom: 0;
   }
 
   .main__title {
     margin: 0;
     position: absolute;
-    left: 206px;
-    top: 174px;
+    left: 27%;
+    top: 22%;
     width: 360px;
     height: 110px;
     display: block;
@@ -864,50 +896,62 @@ margin-bottom: 0;
     font-style: normal;
     line-height: 18px;
     margin-left: -3px;
-    margin-bottom: 87px;
+    margin-bottom: 11%;
   }
 
   .main__img {
-    width: 695px;
+    width: 698px;
     height: 327px;
     margin-left: 5%;
-    margin-bottom: 36px;
+    margin-bottom: 4.3%;
   }
 
   .info-tesla {
+    width: 100%;
     display: inline-block;
-    margin-bottom: 56px;
+    margin-bottom: 8%;
   }
 
   .info-tesla__speed {
-    margin-left: 135px;
-    margin-bottom: 11px;
-    width: 520px;
+    background-image: url(img/2,7Ipad.svg);
+    margin-left: 18%;
+    margin-bottom: 1%;
+    width: 30%;
     height: 100px;
     background-size: contain;
+    margin-right: 7%;
   }
 
   .info-tesla__km {
-    margin-left: 135px;
+    background-image: url(img/632Ipad.svg);
+    margin-left: 0px;
     margin-bottom: 11px;
-    width: 520px;
+    width: 27%;
     height: 100px;
-    background-size: contain;
+    background-size: contain;}
 
   .info-tesla__test {
-    width: 162px;
+    display: inline-block;
+    background-image: url(img/Testdrive-mobile.svg);
+    width: 20%;
     height: 40px;
     background-size: contain;
-    top: 61px;
-    margin-top: -27px;
-    margin-left: 173px;
+    top: 20px;
+    margin-right: 5%;
+    margin-top: -3%;
+    margin-left: 23%;
   }
 
   .info-tesla__button {
-    width: 220px;
+    color: #ffffff;
+    background-color: #E51937;
+    margin-top: 3%;
+    display: inline-block;
+    width: 28%;
     height: 52px;
-    margin-left: 370px;
     margin-right: 0;
+    font-size: 17px;
+    line-height: 57px;
   }
 
   .main__arrow {
@@ -915,84 +959,86 @@ margin-bottom: 0;
   }
 
   .future__logo-models {
-    left: 440px;
-    top: 1004px;
+    left: 57.3%;
+    top: 126%;
   }
 
   .future {
     padding-left: 0;
     background-size: 100%;
     background-repeat: no-repeat;
-    padding-top: 550px;
+    padding-top: 71.5%;
     background-position-x: 0px;
-    background-position-y: 45px;
+    background-position-y: 8.3%;
     margin-bottom: 0;
   }
   .future__info {
-    padding-bottom: 46px;
+    padding-bottom: 6.1%;
   }
   .future__info_title{
+    font-size: 32px;
     width: 43%;
-    padding-left: 35px;
-    padding-top: 4px;
+    padding-left: 5%;
+    padding-top: 0.5%;
   }
 
   .future__info_description {
     width: 43%;
-    padding-left: 36px;
-    padding-top: 11px;
-    margin-bottom: 73px;
+    padding-left: 4.5%;
+    padding-top: 1.5%;
+    margin-bottom: 9.2%;
+    font-size: 17px;
   }
 
 .future__info_display {
   width: 38%;
   position: absolute;
   margin: 0;
-  top: 1617px;
-  left: 454px;
+  top: 203.5%;
+  left: 59%;
 }
 
 .future__info_wifi {
   width: 38%;
   position: absolute;
   margin: 0;
-  top: 1702px;
-  left: 451px;
+  top: 214.5%;
+  left: 58.5%;
 }
 
 .future__info_bag {
   width: 38%;
   position: absolute;
   margin: 0;
-  top: 1794px;
-  left: 454px;
+  top: 226%;
+  left: 59%;
 }
 
 .future__info_more {
-  padding-left: 176px;
-  font-size: 16px;
+  padding-left: 22%;
+  font-size: 17px;
 }
 
 .future__info_more::after {
   width: 23px;
   height: 23px;
-  left: -188px;
+  left: -24.7%;
   top: 1px;
 }
 
 .future__info_more::before {
   width: 25px;
   height: 25px;
-  left: -20px;
+  left: -2%;
   top: 10px;
 }
 
 .future__info_order {
-  width: 216px;
+  width: 28%;
   height: 51px;
   font-size: 17px;
   vertical-align: middle;
-  line-height: 50px;
+  line-height: 44px;
 }
 
  .safety-info__result {
@@ -1003,7 +1049,7 @@ margin-bottom: 0;
     background-size: 77%;
     background-position-x: 96px;
     background-position-y: 69px;
-    padding-top: 538px;
+    padding-top: 70.1%;
     padding-right: 0;
   }
 
@@ -1013,100 +1059,117 @@ margin-bottom: 0;
 
   .safety-info__title {
     width: 42%;
-    padding-top: 15px;
-    padding-left: 33px;
+    padding-top: 1.9%;
+    font-size: 32px;
+    padding-left: 4.5%;
     margin: 0;
   }
 
   .safety-info__description {
     width: 42%;
-    padding-left: 33px;
-    padding-top: 12px;
-    padding-bottom: 73px;
+    padding-left: 4.5%;
+    padding-top: 1.5%;
+    padding-bottom: 9%;
     font-size: 17px;
-    margin-bottom: 22px;
+    margin-bottom: 3%;
     margin-left: 0;
     margin-right: 0;
   }
 
   .safety__img {
-    width: 760px;
+    width: 98%;
     height: 400px;
-    left: -22px;
-    top: 2159px;
+    left: -2%;
+    top: 271%;
   }
 
   .img-more {
-    width: 760px;
+    width: 98%;
     height: 440px;
-    left: -22px;
-    top: 2159px;
+    left: -2%;
+    top: 271%;
   }
 
   .img-more__Car-crash {
-    width: 189px;
-    height: 84px;
-    left: 435px;
-    top: 146px;
+    background-repeat: no-repeat;
+    background-image: url(img/Car-crashIpad.svg);
+    width: 26%;
+    left: 56.9%;
+    top: 61.5%;
   }
 
   .img-more__Protection-1 {
-    width: 136px;
+    background-repeat: no-repeat;
+    background-image: url(img/Protection1IPAD.svg);
+    width: 19%;
     height: 203px;
-    left: 2px;
-    top: 1px;
+    left: 25%;
+    top: -27.8%;
   }
 
   .img-more__Protection-2 {
-    width: 135px;
+    background-image: url(img/Protection-2Ipad.svg);
+    background-repeat: no-repeat;
+    width: 17%;
     height: 98px;
-    left: 61px;
-    top: -139px;
+    left: 51.7%;
+    top: -82%;
   }
 
 .safety-info__protection-title {
+  color: #FFFFFF;
   width: 43%;
   position: absolute;
-  top: 2618px;
-  left: 364px;
+  top: 329.5%;
+  left: 48%;
+  font-size: 32px;
 }
 
 .front-stars {
+  color: #FFFFFF;
   width: 42%;
   position: absolute;
-  top: 2710px;
-  left: 421px;
+  top: 341%;
+  left: 55%;
 }
 
 .side-stars {
+  color: #FFFFFF;
   width: 42%;
   position: absolute;
-  top: 2747px;
-  left: 421px;
+  top: 345.8%;
+  left: 55%;
 }
 
 .rack-stars {
+  color: #FFFFFF;
   width: 42%;
   position: absolute;
   font-size: 17px;
-  top: 2768px;
-  left: 366px;
+  top: 348.4%;
+  left: 48%;
   margin-top: 17px;
   margin-bottom: 1px;
 }
 
+.rack-stars__first {
+  margin-left: 6.8%;
+}
+
 .driver-stars {
+  color: #FFFFFF;
   width: 42%;
   position: absolute;
-  top: 2822px;
-  left: 421px;
+  top: 355.2%;
+  left: 55%;
 }
 
 .passenger-stars {
+  color: #FFFFFF;
   width: 42%;
   position: absolute;
-  top: 2858px;
-  left: 421px;
+  top: 360%;
+  left: 55%;
 }
 
 .safety-info__more {
